--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
   global:
     - DBHOST=localhost
     - PGUSER=postgres
-    - PGPASS=
+    - PGPASS=postgres
 before_install:
   - sudo apt-get update
   - sudo apt-get --yes remove postgresql\*
