--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
 install:
   - pip install -r requirements.txt
 before_script:
-  - psql -c 'create database todo;' -U postgres
+  - psql -c 'create database ATC;' -U postgres
 script: 
   - python manage.py test
   - chmod +x run_sonar.sh && ./run_sonar.sh
