--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,5 @@ install:
 before_script:
   - psql -c 'create database ATC;' -U postgres
 script: 
-  - python manage.py test
+  - python YEEET/manage.py test
   - chmod +x run_sonar.sh && ./run_sonar.sh
