--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ install:
   - pip install -r requirements.txt
 before_script:
   - psql -c 'create database ATC;' -U postgres
+  - mv YEET/settings.py.travis YEET/settings.py
 script: 
-  - python YEEET/manage.py test
+  - python manage.py test
   - chmod +x run_sonar.sh && ./run_sonar.sh
